refactor: Introduce ad server adapter and config
This commit extracts the ad server logic into a configurable adapter pattern, preparing the application for multiple ad server implementations.

Key changes:
- Creates an  base class in .
- Moves the  into the  directory and refactors it to implement the new interface, making it responsible for its own state management.
- Removes the global  state from , delegating all media buy operations to the configured adapter.
- Adds a  to manage the Gemini API key and ad server settings, removing the hardcoded key from .
- Includes a  for user guidance and adds , , and  to  to protect sensitive data and keep the repository clean.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-# Python-generated files
-__pycache__/
-*.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
-
-# Virtual environments
-.venv
-adcp.db
+# Local configuration
+config.json\n# Python cache\n__pycache__/\n\n# Local database\nadcp.db
