--- a/config.json.sample
+++ b/config.json.sample
@@ -2,5 +2,9 @@
     "gemini_api_key": "YOUR_API_KEY_HERE",
     "ad_server": {
         "adapter": "mock_ad_server"
+    },
+    "creative_engine": {
+        "adapter": "mock_creative_engine",
+        "human_review_required": true
     }
 }
