feat: Implement production-ready GAM adapter
This commit builds out the  adapter with production-ready features, including config-driven targeting and detailed delivery reporting.

Key changes:
- **Enhanced Reporting:** The  method now runs a detailed report in GAM, fetching key metrics like impressions, clicks, CTR, spend, and video completions. It then parses the report to populate the response schema.
- **Configurable Targeting:** The  method is refactored to handle sophisticated targeting. It reads a new  from the config to translate abstract signals from the proposal into concrete GAM targeting criteria, supporting both audience segments and custom key-values.
- **Database Schema:** The  table in the database is updated with  and  columns to store GAM-specific targeting information.
- **AI Prompt:** The prompt in  is updated to instruct the AI to include the new GAM targeting information in its response.
- **Dependencies:** Adds the  library to .

--- a/config.json.sample
+++ b/config.json.sample
@@ -1,7 +1,17 @@
 {
     "gemini_api_key": "YOUR_API_KEY_HERE",
     "ad_server": {
-        "adapter": "mock_ad_server"
+        "adapter": "google_ad_manager",
+        "network_code": "YOUR_NETWORK_CODE",
+        "service_account_key_file": "/path/to/your/service-account-key.json",
+        "advertiser_id": "YOUR_ADVERTISER_ID",
+        "trafficker_id": "YOUR_TRAFFICKER_ID",
+        "company_id": "YOUR_COMPANY_ID",
+        "targeting_mapping": {
+            "custom_keys": {
+                "High-Income-Earners": "YOUR_INCOME_KEY_ID"
+            }
+        }
     },
     "creative_engine": {
         "adapter": "mock_creative_engine",
