feat: Implement Triton Digital ad server adapter
This commit introduces a new ad server adapter for the Triton Digital TAP API, demonstrating the flexibility of the adapter pattern.

Key changes:
- Creates a new  adapter in .
- Implements the core adapter methods (, , , ) by mapping them to the corresponding Triton API endpoints for Campaigns, Flights, and Reports.
- Adds  to  to handle HTTP requests.
- Updates  with a new configuration section for the Triton adapter.

--- a/config.json.sample
+++ b/config.json.sample
@@ -1,17 +1,9 @@
 {
     "gemini_api_key": "YOUR_API_KEY_HERE",
     "ad_server": {
-        "adapter": "google_ad_manager",
-        "network_code": "YOUR_NETWORK_CODE",
-        "service_account_key_file": "/path/to/your/service-account-key.json",
-        "advertiser_id": "YOUR_ADVERTISER_ID",
-        "trafficker_id": "YOUR_TRAFFICKER_ID",
-        "company_id": "YOUR_COMPANY_ID",
-        "targeting_mapping": {
-            "custom_keys": {
-                "High-Income-Earners": "YOUR_INCOME_KEY_ID"
-            }
-        }
+        "adapter": "triton_digital",
+        "base_url": "https://tap-api.tritondigital.com/v1",
+        "auth_token": "YOUR_TRITON_AUTH_TOKEN"
     },
     "creative_engine": {
         "adapter": "mock_creative_engine",
