feat: Implement full test suite and targeting documentation
This commit achieves two main goals:

1.  Resolves all issues preventing the full test suite from running, including fixes for imports, mocks, and direct function calls in tests. All 5 tests now pass.
2.  Adds comprehensive documentation for currently supported and planned ad server targeting features for both Google Ad Manager and Triton Digital. A TODO file has been added to track future implementation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,26 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
+
 dependencies = [
     "fastmcp>=2.10.6",
     "google-generativeai>=0.5.4",
     "rich>=13.7.1",
     "google-ads>=24.1.0",
     "requests>=2.32.3",
+    "googleads>=46.0.0",
+]
+
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.3.2",
+    "pytest-mock>=3.14.0",
+]
+
+[dependency-groups]
+dev = [
+    "mocker>=1.1.1",
+    "pytest>=8.4.1",
+    "pytest-mock>=3.14.1",
 ]
