feat: Add flexible database backend support
- Support SQLite, PostgreSQL, and MySQL databases
- Store SQLite in persistent location (~/.adcp/) by default
- Add DATABASE_URL support for cloud deployments
- Add comprehensive database configuration guide
- Update pyproject.toml with optional database drivers
- Maintain backward compatibility with existing deployments

This addresses concerns about SQLite persistence and provides
production-ready database options for multi-tenant deployments.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,16 @@ dev = [
     "pytest>=8.3.2",
     "pytest-mock>=3.14.0",
 ]
+postgresql = [
+    "psycopg2-binary>=2.9.9",
+]
+mysql = [
+    "pymysql>=1.1.0",
+]
+all-databases = [
+    "psycopg2-binary>=2.9.9",
+    "pymysql>=1.1.0",
+]
 
 [dependency-groups]
 dev = [
