--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "uvicorn>=0.23.0",
     "beautifulsoup4>=4.12.0",
     "aiohttp>=3.9.0",
+    "alembic>=1.13.0",
+    "sqlalchemy>=2.0.0",
 ]
 
 
