--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
 dev = [
     "pytest>=8.3.2",
     "pytest-mock>=3.14.0",
+    "pytest-asyncio>=1.1.0",
+    "pytest-cov>=6.2.1",
 ]
 ui-tests = [
     "playwright==1.48.0",
