--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -123,7 +123,7 @@ jobs:
         SUPER_ADMIN_EMAILS: test@example.com
         ADCP_TESTING: true
       run: |
-        uv run pytest tests/integration/ -v --tb=short --cov=. --cov-report=xml --cov-report=term-missing
+        uv run pytest tests/integration/ -v --tb=short --cov=. --cov-report=xml --cov-report=term-missing -m "not requires_server"
     
     - name: Upload coverage to Codecov
       if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
