--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dependencies = [
     "watchdog>=6.0.0",
     "waitress>=3.0.0",
     "pytz>=2024.1",
+    "flask-socketio>=5.5.1",
+    "python-socketio>=5.13.0",
+    "simple-websocket>=1.1.0",
 ]
 
 
