--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,16 @@ repos:
         entry: sh -c 'cp adcp_local.db .test.db && DATABASE_URL=sqlite:///.test.db python migrate.py && rm .test.db'
         language: system
         pass_filenames: false
-        stages: [commit]
+        stages: [manual]  # Changed from commit to manual - run with: pre-commit run test-migrations
+        
+      # Run quick unit tests before commit (optional - can be skipped with --no-verify)
+      - id: pytest-unit
+        name: Run unit tests (optional)
+        entry: sh -c 'uv run pytest tests/unit/ -x --tb=short -q || echo "⚠️  Tests failed but continuing (use --no-verify to skip)"'
+        language: system
+        pass_filenames: false
+        stages: [manual]  # Changed to manual - run with: pre-commit run pytest-unit
+        verbose: true
         
       # Check for API deprecations
       - id: check-api-deprecations
@@ -62,7 +71,7 @@ repos:
     rev: 23.3.0
     hooks:
       - id: black
-        language_version: python3.12
+        language_version: python3
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.0.272
