fix: Critical migration safety - never modify existing migrations
CRITICAL FIX: Reverted improper modifications to migration 014 and created proper fix

Changes:
1. Reverted 014_add_context_persistence.py to original state
   - NEVER modify existing migrations that may have run in production!
   - This is a fundamental rule of database migrations

2. Created new migration 015_handle_partial_schemas.py
   - Properly handles idempotency with safe operations
   - Checks for table/column existence before creating
   - This is the CORRECT way to fix migration issues

3. Added comprehensive migration best practices to CLAUDE.md
   - Clear documentation of the immutability rule
   - Examples of correct vs incorrect approaches
   - Instructions for checking migration status

4. Created pre-commit hook to prevent future violations
   - scripts/check_migration_modifications.py
   - Automatically checks if existing migrations are modified
   - Fails the commit with clear error messages

This ensures database consistency across all environments and prevents the
catastrophic issues that can arise from modifying migrations after deployment.

🛡️ Migration Safety: Enforced

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,15 @@
 repos:
   - repo: local
     hooks:
+      # CRITICAL: Prevent modification of existing migration files
+      - id: check-migration-modifications
+        name: Check migration modifications
+        entry: python scripts/check_migration_modifications.py
+        language: system
+        pass_filenames: false
+        always_run: true
+        stages: [commit]
+        
       # Check for removed columns still referenced in code
       - id: check-schema-references
         name: Check schema references
