--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
       # CRITICAL: Prevent modification of existing migration files
       - id: check-migration-modifications
         name: Check migration modifications
-        entry: python scripts/check_migration_modifications.py
+        entry: python3 scripts/check_migration_modifications.py
         language: system
         pass_filenames: false
         always_run: true
@@ -13,7 +13,7 @@ repos:
       # Check for removed columns still referenced in code
       - id: check-schema-references
         name: Check schema references
-        entry: python scripts/check_schema_references.py
+        entry: python3 scripts/check_schema_references.py
         language: system
         pass_filenames: false
         always_run: true
@@ -21,7 +21,7 @@ repos:
       # Validate model column lengths
       - id: validate-column-lengths
         name: Validate database column lengths
-        entry: python scripts/validate_column_lengths.py
+        entry: python3 scripts/validate_column_lengths.py
         language: system
         files: '(models|schemas)\.py$'
         
@@ -52,14 +52,14 @@ repos:
       # Check for API deprecations
       - id: check-api-deprecations
         name: Check for deprecated API usage
-        entry: python scripts/check_api_deprecations.py
+        entry: python3 scripts/check_api_deprecations.py
         language: system
         files: 'adapters/.*\.py$'
         
       # Validate Pydantic vs SQLAlchemy imports
       - id: validate-model-imports
         name: Validate model imports
-        entry: python scripts/validate_model_imports.py
+        entry: python3 scripts/validate_model_imports.py
         language: system
         files: '\.py$'
 
