--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,8 +91,6 @@ exclude = [
     "dist",
     "alembic/versions",
 ]
-
-[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -109,6 +107,6 @@ ignore = [
     "F821",  # undefined name
 ]
 
-[tool.ruff.lint.per-file-ignores]
+[tool.ruff.per-file-ignores]
 "tests/*" = ["E722", "F821"]
 "admin_ui.py" = ["E402", "E722"]
