--- a/pytest.ini
+++ b/pytest.ini
@@ -24,6 +24,7 @@ markers =
     asyncio: Async test functions
     requires_db: Tests requiring a real database with tables
     requires_server: Tests requiring a running MCP server
+    ui: Tests for UI template rendering and web interface
 
 # Ignore patterns
 norecursedirs = .git .venv tools scripts migrations
