refactor: Consolidate admin UI entry points into src/admin/server.py
- Remove redundant admin_ui*.py files from root directory
- Create unified src/admin/server.py with support for multiple server backends
- Update all Docker and script references to use python -m src.admin.server
- Clean up root directory by removing 3 redundant entry point files
- Improve code organization with proper module structure

--- a/docker-compose.override.example.yml
+++ b/docker-compose.override.example.yml
@@ -30,7 +30,7 @@ services:
     # volumes:
     #   - ./templates:/app/templates
     #   - ./static:/app/static
-    #   - ./admin_ui_refactored_prod.py:/app/admin_ui_refactored_prod.py
+    #   - ./src/admin:/app/src/admin
 
     # Expose Flask debugger port
     # ports:
