fix: Resolve systemic model confusion between SQLAlchemy and Pydantic
This commit addresses critical systemic issues that were causing multiple failures:

1. Model Confusion Fix:
   - Clear separation between SQLAlchemy ORM models (database) and Pydantic schemas (API/business logic)
   - Fixed AttributeError: 'AdapterConfig' has no attribute 'model_validate_json'
   - Added validation script to detect and prevent future confusion
   - Updated CLAUDE.md with comprehensive guidelines

2. Form Field Mismatch Fix:
   - Fixed tenant name update error ('Tenant name is required')
   - Changed request.form.get('tenant_name') to request.form.get('name')
   - Created form field validation tools
   - Added pre-commit hooks for validation

3. Dashboard Template Variables:
   - Fixed missing template variables causing 'Error loading dashboard'
   - Added revenue_change_abs, task metrics, advertiser counts
   - Ensured all required variables are passed to templates

4. MCP Test Endpoint:
   - Added missing /api/mcp-test/call endpoint
   - Fixed asyncio import and event loop handling
   - Restored MCP protocol testing functionality

5. Documentation Updates:
   - Comprehensive 'Critical Issues to Avoid' section in CLAUDE.md
   - Added debugging patterns and solutions
   - Created validation scripts for ongoing monitoring
   - Added form field best practices

These fixes address the root causes identified in GitHub issue #79 and prevent
similar issues from recurring through validation tools and documentation.

Testing: All unit tests pass, form validation succeeds, dashboard loads correctly

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -78,6 +78,14 @@ repos:
         files: '\.html$'
         pass_filenames: false
 
+      # Check for critical form field naming mismatches
+      - id: form-field-validation
+        name: Validate critical form field consistency
+        entry: python3 scripts/verify_form_field_fix.py
+        language: system
+        files: '(tenant_settings\.html|settings\.py)$'
+        pass_filenames: false
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
