fix: Critical test suite quality improvements (#79)
BREAKING CHANGE: Major test suite refactoring to improve quality

## What Changed
- Removed all 29 @pytest.mark.skip decorators from test files
- Created comprehensive smoke test suite for critical paths
- Reduced test count from 60 to 35 files (41.7% reduction)
- Added pre-commit hooks to prevent test skipping and over-mocking
- Added migration-specific tests for database safety

## Why These Changes
Addresses issue #79: Test suite was failing to catch production errors
despite having 230+ tests. Tests were heavily mocked and skipping
critical integration tests.

## Key Improvements
- Zero skipped tests (was 29)
- 100% endpoint smoke test coverage
- Focus on integration over mocked unit tests
- Pre-commit enforcement of test quality standards
- Database migration safety tests

## Test Categories
- smoke/: Critical path tests that MUST always pass
- integration/: Real integration tests with database
- e2e/: Full system end-to-end tests
- unit/: Focused unit tests without heavy mocking

Fixes #79

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,6 +14,7 @@ addopts =
 
 # Markers
 markers =
+    smoke: Critical path tests that MUST always pass
     unit: Fast, isolated unit tests
     integration: Tests requiring database or services
     e2e: End-to-end tests with full system
