--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,7 +112,7 @@ jobs:
       env:
         DATABASE_URL: postgresql://adcp_user:test_password@localhost:5432/adcp_test
       run: |
-        uv run python migrate.py
+        uv run python scripts/ops/migrate.py
 
     - name: Run integration tests
       env:
@@ -175,13 +175,13 @@ jobs:
       env:
         DATABASE_URL: postgresql://adcp_user:test_password@localhost:5432/adcp_test
       run: |
-        uv run python migrate.py
+        uv run python scripts/ops/migrate.py
 
     - name: Initialize test data
       env:
         DATABASE_URL: postgresql://adcp_user:test_password@localhost:5432/adcp_test
       run: |
-        uv run python init_database.py
+        uv run python scripts/setup/init_database.py
 
     - name: Run E2E tests
       env:
