--- a/Dockerfile.fly
+++ b/Dockerfile.fly
@@ -1,12 +1,13 @@
 # Fly.io Dockerfile for AdCP Sales Agent with ADK
 FROM python:3.12-slim
 
-# Install dependencies
+# Install dependencies including nginx
 RUN apt-get update && apt-get install -y \
     libpq5 \
     curl \
     gcc \
     libpq-dev \
+    nginx \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python packages
@@ -21,6 +22,9 @@ RUN uv sync
 # Copy application
 COPY . .
 
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/nginx.conf
+
 # Add .venv to PATH
 ENV PATH="/app/.venv/bin:$PATH"
 ENV PYTHONUNBUFFERED=1
@@ -30,15 +34,15 @@ ENV ADCP_SALES_PORT=8080
 ENV ADMIN_UI_PORT=8001
 ENV ADK_WEB_PORT=8091
 
-# Make run_all_services.py executable
-RUN chmod +x run_all_services.py
+# Make scripts executable
+RUN chmod +x run_all_services.py entrypoint.sh
 
-# Health check for MCP server
+# Health check for nginx proxy
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:8080/health || exit 1
+    CMD curl -f http://localhost:8000/health || exit 1
 
-# Expose all service ports
-EXPOSE 8080 8001 8091
+# Expose only the unified nginx port
+EXPOSE 8000
 
-# Run all services
-CMD ["python", "run_all_services.py"]
+# Run all services via entrypoint which handles migrations
+ENTRYPOINT ["/bin/bash", "entrypoint.sh"]
