--- a/nginx.conf
+++ b/nginx.conf
@@ -46,15 +46,15 @@ http {
         proxy_buffers 8 16k;
         proxy_busy_buffers_size 32k;
 
-        # MCP Server at /mcp
-        location /mcp {
+        # MCP Server at /mcp (strip prefix)
+        location /mcp/ {
+            rewrite ^/mcp/(.*)$ /$1 break;
             proxy_pass http://mcp_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Prefix /mcp;
 
             # WebSocket support for MCP streaming
             proxy_set_header Upgrade $http_upgrade;
@@ -63,35 +63,47 @@ http {
             proxy_send_timeout 300s;
         }
 
-        # Admin UI at /admin
-        location /admin {
+        # Admin UI at /admin (strip prefix)
+        location /admin/ {
+            rewrite ^/admin/(.*)$ /$1 break;
             proxy_pass http://admin_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Prefix /admin;
-
-            # Session handling for admin UI
-            proxy_cookie_path / /admin/;
         }
 
-        # ADK Agent at /a2a
-        location /a2a {
+        # Redirect /admin to /admin/
+        location = /admin {
+            return 301 /admin/;
+        }
+
+        # ADK Agent at /a2a (strip prefix)
+        location /a2a/ {
+            rewrite ^/a2a/(.*)$ /$1 break;
             proxy_pass http://adk_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Prefix /a2a;
 
             # WebSocket support for ADK streaming
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_read_timeout 300s;
             proxy_send_timeout 300s;
+        }
+
+        # Redirect /a2a to /a2a/
+        location = /a2a {
+            return 301 /a2a/;
+        }
+
+        # Redirect /mcp to /mcp/
+        location = /mcp {
+            return 301 /mcp/;
         }
 
         # Root redirect to admin UI
