fix: Update routing to properly handle MCP client connections
- Fix nginx rewrite rules for MCP path stripping
- MCP server expects requests at root, nginx now properly strips /mcp prefix
- Remove unnecessary path configuration attempts

--- a/nginx.conf
+++ b/nginx.conf
@@ -46,9 +46,10 @@ http {
         proxy_buffers 8 16k;
         proxy_busy_buffers_size 32k;
 
-        # MCP Server at /mcp (strip prefix)
+        # MCP Server at /mcp (strip the /mcp prefix and pass to root)
         location /mcp/ {
-            rewrite ^/mcp/(.*)$ /$1 break;
+            # Strip /mcp from the path
+            rewrite ^/mcp(/.*)$ $1 break;
             proxy_pass http://mcp_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
