--- a/nginx.conf
+++ b/nginx.conf
@@ -46,11 +46,9 @@ http {
         proxy_buffers 8 16k;
         proxy_busy_buffers_size 32k;
 
-        # MCP Server at /mcp (strip the /mcp prefix and pass to root)
+        # MCP Server at /mcp (pass through as-is, MCP expects /mcp/)
         location /mcp/ {
-            # Strip /mcp from the path
-            rewrite ^/mcp(/.*)$ $1 break;
-            proxy_pass http://mcp_backend;
+            proxy_pass http://mcp_backend/mcp/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
