fix: Quote SQLite memory URL in workflow to fix YAML parsing error
The SQLite memory URL 'sqlite:///:memory:' contains three colons which
was being misinterpreted as a YAML mapping. Adding quotes fixes the
YAML parsing error that was preventing CI from running.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Run smoke tests
       env:
-        DATABASE_URL: sqlite:///:memory:
+        DATABASE_URL: "sqlite:///:memory:"
         GEMINI_API_KEY: test_key
         PYTEST_CURRENT_TEST: true
         ADCP_TESTING: true
