--- a/nginx.conf
+++ b/nginx.conf
@@ -73,6 +73,16 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Handle admin redirects like /login, /static, etc (no strip prefix)
+        location ~ ^/(login|static|favicon.ico) {
+            proxy_pass http://admin_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Redirect /admin to /admin/
         location = /admin {
             return 301 /admin/;
