fix: Address code review findings
- Remove debug logging from A2A server (logger.info for MCP raw result)
- Fix GitHub workflow to properly fail on test failures (remove || true)
- Keep docker-compose passwords as placeholders (OK for dev environment)
- Confirmed .venv already in .gitignore

Note: Larger refactoring items (main.py size, error handling improvements)
should be addressed in separate PRs to keep this one focused.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,8 +56,7 @@ jobs:
         PYTEST_CURRENT_TEST: true
         ADCP_TESTING: true
       run: |
-        uv run pytest tests/smoke/ -v --tb=short -m smoke || true
-        # Always pass for now - we're fixing tests incrementally
+        uv run pytest tests/smoke/ -v --tb=short -m smoke
 
     - name: Check for skipped tests
       run: |
