--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
         PYTEST_CURRENT_TEST: true
         ADCP_TESTING: true
       run: |
-        uv run pytest tests/smoke/ -v --tb=short -m "smoke and not requires_server"
+        uv run pytest tests/smoke/ -v --tb=short -m "smoke and not requires_server and not skip_ci"
 
     - name: Check for skipped tests
       run: |
