--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -72,16 +72,19 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Prefix /admin;
         }
 
-        # Handle admin redirects like /login, /static, etc (no strip prefix)
-        location ~ ^/(login|static|favicon.ico) {
+        # Handle admin redirects like /login, /auth, /static, etc (no strip prefix)
+        location ~ ^/(login|auth|callback|logout|static|favicon.ico) {
             proxy_pass http://admin_backend;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
         }
 
         # Redirect /admin to /admin/
