Fix nginx port-in-redirect issue for Fly.io deployment
- Add port_in_redirect off to prevent nginx from adding :8000 to redirects
- Add absolute_redirect off to use relative redirects
- This fixes the issue where redirects were going to :8000 instead of using correct ports

These directives ensure nginx doesn't add its internal listening port to redirect URLs
when behind Fly.io's proxy layer.

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -39,6 +39,10 @@ http {
     server {
         listen 8000;
         server_name _;
+        
+        # Disable port in redirects (important for reverse proxy setups)
+        port_in_redirect off;
+        absolute_redirect off;
 
         # Increase buffer sizes for large requests/responses
         client_max_body_size 10M;
@@ -121,6 +125,7 @@ http {
 
         # Root redirect to admin UI
         location = / {
+            # Use relative redirect to avoid port issues
             return 302 /admin/;
         }
 
