Fix HTTPS detection for OAuth callbacks
- Pass through X-Forwarded-Proto from Fly.io's proxy correctly
- Use conditional fallback to  when header not present
- This ensures OAuth callbacks use https:// URLs in production

The issue was that nginx was always passing 'http' as the scheme
since it listens on port 8000 without SSL. Now it correctly
passes through the original protocol from Fly.io's proxy.

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -43,6 +43,13 @@ http {
         # Disable port in redirects (important for reverse proxy setups)
         port_in_redirect off;
         absolute_redirect off;
+        
+        # Pass through X-Forwarded headers from upstream proxy (Fly.io)
+        # Use map to provide fallback when header is not set
+        set $proxy_x_forwarded_proto $http_x_forwarded_proto;
+        if ($proxy_x_forwarded_proto = "") {
+            set $proxy_x_forwarded_proto $scheme;
+        }
 
         # Increase buffer sizes for large requests/responses
         client_max_body_size 10M;
@@ -58,7 +65,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
 
             # WebSocket support for MCP streaming
             proxy_set_header Upgrade $http_upgrade;
@@ -75,7 +82,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Prefix /admin;
         }
@@ -87,7 +94,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
             proxy_set_header X-Forwarded-Host $host;
         }
 
@@ -104,7 +111,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
 
             # Support for streaming responses
             proxy_set_header Upgrade $http_upgrade;
