Fix HTTPS detection using Fly.io's Fly-Forwarded-Proto header
- Check for Fly-Forwarded-Proto header first (Fly.io specific)
- Fall back to X-Forwarded-Proto, then to $scheme
- Add logging to debug proto headers

This should properly detect HTTPS when behind Fly.io's proxy

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -9,7 +9,8 @@ events {
 http {
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+                    '"$http_user_agent" "$http_x_forwarded_for" '
+                    '"x-fwd-proto: $http_x_forwarded_proto"';
 
     access_log /dev/stdout main;
 
@@ -45,8 +46,11 @@ http {
         absolute_redirect off;
         
         # Pass through X-Forwarded headers from upstream proxy (Fly.io)
-        # Use map to provide fallback when header is not set
-        set $proxy_x_forwarded_proto $http_x_forwarded_proto;
+        # Fly.io uses Fly-Forwarded-Proto header
+        set $proxy_x_forwarded_proto $http_fly_forwarded_proto;
+        if ($proxy_x_forwarded_proto = "") {
+            set $proxy_x_forwarded_proto $http_x_forwarded_proto;
+        }
         if ($proxy_x_forwarded_proto = "") {
             set $proxy_x_forwarded_proto $scheme;
         }
