Fix admin routing properly without nginx hacks
- Remove hacky nginx proxying of individual routes (/auth, /login, etc)
- Pass full /admin/* paths to Flask backend without stripping
- Use X-Script-Name header to tell Flask it's mounted at /admin
- Fix CustomProxyFix to properly handle PATH_INFO when mounted

This is the proper solution - Flask now knows it's mounted at /admin
and generates all URLs relative to that base path

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -78,28 +78,18 @@ http {
             proxy_send_timeout 300s;
         }
 
-        # Admin UI at /admin (strip prefix)
+        # Admin UI at /admin - DO NOT strip prefix, let Flask handle it
         location /admin/ {
-            rewrite ^/admin/(.*)$ /$1 break;
-            proxy_pass http://admin_backend;
+            # Pass the full path including /admin/ prefix to the backend
+            proxy_pass http://admin_backend/admin/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
             proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Prefix /admin;
-        }
-
-        # Handle admin redirects like /login, /auth, /static, etc (no strip prefix)
-        location ~ ^/(login|auth|callback|logout|static|favicon.ico) {
-            proxy_pass http://admin_backend;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-            proxy_set_header X-Forwarded-Host $host;
+            # Tell Flask it's mounted at /admin
+            proxy_set_header X-Script-Name /admin;
         }
 
         # Redirect /admin to /admin/
