Add /.well-known/agent-card.json endpoint for A2A client compatibility
Some A2A clients expect agent-card.json instead of the standard agent.json endpoint.
Added nginx proxy rule to serve the same agent card JSON at both endpoints.

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -125,6 +125,17 @@ http {
             proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
         }
 
+        # Some A2A clients expect agent-card.json instead of agent.json
+        # Serve the same content for compatibility
+        location /.well-known/agent-card.json {
+            proxy_pass http://a2a_backend/.well-known/agent.json;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+        }
+
         # Catch common A2A endpoints at root and redirect to /a2a/
         # This handles tasks, message, agent, stream endpoints automatically
         location ~ ^/(tasks|message|agent|stream)(/.*)?$ {
