Fix MCP nginx routing to preserve path prefix
The MCP client was getting 404 errors because nginx was stripping the /mcp/
prefix when proxying to the backend. FastMCP 2.11.3 expects requests at /mcp,
not at the root path.

Changed proxy_pass from http://mcp_backend/ to http://mcp_backend/mcp
to preserve the /mcp path when forwarding requests.

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -62,9 +62,9 @@ http {
         proxy_buffers 8 16k;
         proxy_busy_buffers_size 32k;
 
-        # MCP Server at /mcp (strip /mcp/ prefix, FastMCP handles paths from root)
+        # MCP Server at /mcp (preserve /mcp/ prefix, FastMCP expects paths at /mcp)
         location /mcp/ {
-            proxy_pass http://mcp_backend/;
+            proxy_pass http://mcp_backend/mcp;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
