Fix A2A nginx routing to preserve path prefix
Changed nginx A2A routing from stripping /a2a path to preserving it.
The rewrite rule was sending POST /a2a/ -> POST / to backend, but
python-a2a expects requests at /a2a, not /. This fixes 405 errors.

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -99,8 +99,7 @@ http {
 
         # A2A Server API for agent-to-agent communication
         location /a2a/ {
-            rewrite ^/a2a/(.*)$ /$1 break;
-            proxy_pass http://a2a_backend;
+            proxy_pass http://a2a_backend/a2a/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
