--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -99,7 +99,7 @@ http {
 
         # A2A Server API for agent-to-agent communication
         location /a2a/ {
-            proxy_pass http://a2a_backend/a2a/;
+            proxy_pass http://a2a_backend/a2a;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
