--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -90,6 +90,18 @@ http {
             proxy_set_header X-Forwarded-Host $host;
             # Tell Flask it's mounted at /admin
             proxy_set_header X-Script-Name /admin;
+
+            # SSE-specific configuration for /admin/tenant/*/events
+            proxy_buffering off;           # Disable buffering for real-time streaming
+            proxy_cache off;              # Disable caching for SSE
+            proxy_read_timeout 3600s;     # 1 hour timeout for long-lived SSE connections
+            proxy_send_timeout 3600s;     # 1 hour send timeout
+            proxy_connect_timeout 60s;    # Connection timeout
+
+            # Add SSE headers for event streams
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
         }
 
         # Redirect /admin to /admin/
