Add mypy with SQLAlchemy plugin for type checking
- Add mypy as dev dependency
- Configure mypy.ini with SQLAlchemy plugin
- Add mypy to pre-commit hooks (runs on src/ files only)
- Remove sqlalchemy2-stubs (conflicts with built-in plugin)
- Use SQLAlchemy 2.0's native mypy plugin instead
- Start with lenient settings to allow incremental adoption
- Exclude legacy google_ad_manager_original.py file

Type checking will help catch issues early and improve code quality.
Next steps: Iteratively fix type errors revealed by mypy.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ ui-tests = [
 [dependency-groups]
 dev = [
     "mocker>=1.1.1",
+    "mypy>=1.18.2",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=6.2.1",
