--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -198,3 +198,16 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
+
+  # Type checking with mypy
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.18.2
+    hooks:
+      - id: mypy
+        args: [--config-file=mypy.ini]
+        additional_dependencies:
+          - sqlalchemy[mypy]==2.0.36
+          - types-requests
+          - types-python-dateutil
+        files: '^src/'
+        exclude: '^src/adapters/google_ad_manager_original\.py$'
